--- a/analysis/02_predictive_baseline.ipynb
+++ b/analysis/02_predictive_baseline.ipynb
@@ -1448,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "0d091dbd",
    "metadata": {},
    "outputs": [
@@ -1486,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "880c0763",
    "metadata": {},
    "outputs": [
@@ -1499,7 +1499,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1510,11 +1510,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "64198bf7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>feature</th>\n",
+       "      <th>coefficient</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>cat__region_nan</td>\n",
+       "      <td>0.331446</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>num__tenure_months</td>\n",
+       "      <td>0.246901</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>cat__subscription_tier_Premium</td>\n",
+       "      <td>0.178621</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>cat__subscription_tier_Standard</td>\n",
+       "      <td>0.053143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>cat__region_EU</td>\n",
+       "      <td>0.034620</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>num__monthly_spend</td>\n",
+       "      <td>-0.027959</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>cat__subscription_tier_Basic</td>\n",
+       "      <td>-0.231744</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>cat__region_APAC</td>\n",
+       "      <td>-0.366047</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           feature  coefficient\n",
+       "5                  cat__region_nan     0.331446\n",
+       "6               num__tenure_months     0.246901\n",
+       "1   cat__subscription_tier_Premium     0.178621\n",
+       "2  cat__subscription_tier_Standard     0.053143\n",
+       "4                   cat__region_EU     0.034620\n",
+       "7               num__monthly_spend    -0.027959\n",
+       "0     cat__subscription_tier_Basic    -0.231744\n",
+       "3                 cat__region_APAC    -0.366047"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature_names = model.named_steps[\"preprocess\"].get_feature_names_out()\n",
+    "coefficients = model.named_steps[\"clf\"].coef_[0]\n",
+    "\n",
+    "coef_df = pd.DataFrame({\n",
+    "  \"feature\": feature_names,\n",
+    "  \"coefficient\": coefficients\n",
+    "}).sort_values(by=\"coefficient\", ascending=False)\n",
+    "\n",
+    "coef_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89f93604",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b02e637e",
+   "metadata": {},
+   "source": [
+    "## Model interpretation\n",
+    "\n",
+    "- **Positive coefficients** increase the probability of **High Risk churn (churn_label = 1)**.\n",
+    "\n",
+    "- **Negative coefficients** decrease the probability of High Risk churn.\n",
+    "\n",
+    "### Key signals from this baseline model\n",
+    "\n",
+    "- **Tenure (months)** and **Premium subscription** are associated with higher churn risk.\n",
+    "\n",
+    "- **Basic subscription** and **APAC region** are associated with lower churn risk.\n",
+    "\n",
+    "- **Monthly spend** has a small negative relationship with churn risk.\n",
+    "\n",
+    "- **Missing region values** are strongly associated with higher churn risk.\n",
+    "\n",
+    "\n",
+    "> Note: This is a small dataset. Coefficients should be interpreted as **baseline directional signals**, not final busniess conclusions."
+   ]
   }
  ],
  "metadata": {
